<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">GOOD2GO</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="search_btn">Search</string>
    <string name="me_btn">Me</string>
    <string name="nearby_btn">Nearby</string>
    <string name="about_btn">About</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_list">List</string>
    <string name="menu_map">Map</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_go">GO</string>
    <string name="menu_done">DONE</string>
    <string name="app_promo">VOLUNTEER ON THE GO</string>
     
    
  
        
        
        
        
    <string name="mapskey_adi">0Uu6cSgyV-Rk-xGmraOz-OylHV1x1hjUb3nctvg</string>
    <string name="mapskey_gil">0YhczuGFCWeAeSfdYOPvNNsN5LAJwjDrJvsu-eA</string>
    <string name="mapskey_gil2">0mlP0wxqu2lOLFKJEA-rOlYmxmV0tSz2ElAnSzQ</string>
    <string name="mapskey_mor">0YRc18l4N6pXnWLTP4zPdNZDlP8OuVxR_8Ip7jg</string>    
    <string name="mapview_name">Map</string>
    <string name="meview_name">Me</string>
    <string name="listview_name">List</string>
 	<string name="searchview_name">Search</string>
 	<string name="eventdetails_name">Event Details</string>
 	<string name="eventdetails_tabs">Event Details</string>
 	<string name="countmein">Count Me In</string>
	<string name="confirmation">Confirmation</string>
	<string name="personaldetails">Details</string>
	<string name="about">About</string>
	<string name="feedback">Feedback</string>
	<string name="welcome">Welcome to GOOD2GO!</string>
	<string name="wlecome_choose_act">Please choose your email</string>
	<string name="welcome_YOB">Year of brith</string>
	<string name="welcome_lstName">Last Name</string>
	<string name="welcome_fstName">First Name</string>
	<string name="wlecome_enter_email">Please enter your email</string>
	<string name="welcome_terms">By signing up you agree to GOOD2GO terms and conditions</string>
	<string name="welcom_go">Sign Up</string>
	<string name="welcome_register">Registering user...</string> 	
	<string name="spinner">Login</string>
	
	<string name="server_communication">Communicating with the server...</string>
	<string name="account_prompt">Choose an account</string>
	
	<string name="count_me_in_registering">Sending details...</string> 
	    
	<string name="confirm_good2go">You\'re GOOD2GO!</string>   	
	<string name="confirm_thanks">Thanks for being awesome</string>
	<string name="confirm_got_you">We\'ve got you for:\n</string>
	<string name="confirm_points">POINTS</string>
	<string name="confirm_points_win">Nice! You\'ve just earned</string>
	<string name="confirm_badges">BADGES</string>
	<string name="confirm_badge_win">Whoa! You just got yourself a new badge!</string>
	<string name="confirm_badge_current">Your last badge:</string>
	
	<string name="me_no_events">Soon enough you\'ll have many events here..</string>
	<string name="me_load_future_events">Getting future events...</string>
	<string name="me_load_history_events">Getting history events...</string>
	<string name="me_load_feedback">Checking events that need feedback...</string>
	<string name="me_load_karma">Checking karma points...</string>
	
	<string name="feedback_deserve">You deserve some points!</string>
	<string name="feedback_event">Thanks for being AWESOME and volunteering at\n</string>
	<string name="feedback_all_urs">These points are all yours after answering this simple question:</string>
	<string name="feedback_hwi">How was it?</string>
	<string name="feedback_sendingFeedback">Sending feedback...</string>
	
	<string name="personal_details_message">Please fill out the details required from us by the NPOs.</string>


	<string name="sending_user_details">"Please wait while sending details..."</string>
	<string name="loading">"Loading..."</string>

	<string name="developersTitle">"DEVELOPERS"</string>
	<string name="developers">"Adi Anna Telezhynski\nDana Deutsch\nGil Ben-David\nMor Yogev"</string>
	<string name="collabsTitle">"IN COLLABORATION WITH"</string>
	<string name="contactTitle">"CONTACT DETAILS</string>
	<string name="contact">"GOOD2GO.israel@gmail.com"</string>
	<string name="special_thanksTitle">"SPECIAL THANKS"</string>
	<string name="special_thanks">"To Ori Wachtel for believing in the idea and for his warm support along the way"</string>
	<string name="contribTitle">"OTHER CONTRIBUTORS"</string>
	<string name="welcome_eneter_email">Please enter your email address</string>
	 
	
</resources>