<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 

    android:orientation="vertical" >

    	<TextView
        android:id="@+id/urgood2go_confirmationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"

        android:textStyle="bold"
        android:textColor="@color/app_text_main"
        android:text="@string/confirm_good2go"/> 

    	<TextView
        android:id="@+id/gotYou_confirmationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
		
		android:textColor="@color/app_text_main"
        android:text="@string/confirm_got_you"/>
    	
    	<TextView
        android:id="@+id/thanks_confirmationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginLeft="10dip"

        android:textColor="@color/app_text_main"
        android:text="@string/confirm_thanks"/> 

		<TextView
        android:id="@+id/pointsTitle_confirmationView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
		
		android:background="@color/app_secondary_color"
		
		android:textColor="@color/app_text_white"
		android:textStyle="bold"
        android:text="@string/confirm_points"/>

    	<TextView
        android:id="@+id/pointsWinText_confirmationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginLeft="10dip"

        android:textColor="@color/app_text_main"
        android:text="@string/confirm_points_win"/>
    	
    	<LinearLayout
    	    android:layout_gravity="center_horizontal"
    	    android:orientation="horizontal"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
	    	
	    	<ImageView
		    	android:id="@+id/pointsPic"		
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    
			    android:layout_marginTop="10dip"

		    	android:src="@drawable/points_plus_left"/>
	    	
	    	
	    	<Button
		    	android:id="@+id/pointsWinNumber_confirmationView"
		
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    			    
			    android:layout_marginTop="10dip"
		    
			    android:clickable="false"
		
		    	android:background="@drawable/points_plus_middle"  
		        
		        android:textStyle="bold"
		        android:textColor="@color/app_text_white"
		        android:text=" 200000 "/>
	    	
	    	<ImageView
		    	android:id="@+id/pointsRightPic"		
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    
			    android:layout_marginTop="10dip"

		    	android:src="@drawable/points_plus_right"/>
		</LinearLayout>
		
		<TextView
        android:id="@+id/badgesTitle_confirmationView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		
		android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
		
		android:background="@color/app_secondary_color"
		
		android:textStyle="bold"
		android:textColor="@color/app_text_white"
        android:text="@string/confirm_badges"/>	
        		
		
		<TextView
        android:id="@+id/badgesText_confirmationView" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginLeft="10dip"
        
        android:textColor="@color/app_text_main"
        android:text="@string/confirm_badge_current"/>
    	
    	
    	<ImageView
        android:id="@+id/badgeImage_confirmationView"
        style="@style/BadgeImage"
       
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"/>
    	
    	<TextView
        android:id="@+id/badgeName_confirmationView" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
		android:layout_gravity="center_horizontal"
		
        android:textColor="@color/app_text_main"
        android:text="Saint"/> 			
</LinearLayout>