<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0 

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:layout_margin = "10dip" >

    <TextView
        android:id="@+id/textView1"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="10dip"
        android:layout_marginBottom="20dip"

        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/app_main_color" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:text="@string/welcome_eneter_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/app_secondary_color" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/terms"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"

        android:text="@string/welcome_terms"
        android:textAppearance="?android:attr/textAppearanceSmall"

        android:textColor="@color/app_secondary_color" />
    
    <Button
        android:id="@+id/goButton"
        style="@style/ButtonCountMeIn"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        
        android:layout_below="@id/terms"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="50dip"

        android:text="@string/welcom_go" />
</LinearLayout>
    
    <ImageView
        android:id="@+id/nice2meet"
        android:layout_width="176dp"
        android:layout_height="173dp"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" 
        android:src="@drawable/login_nice2meet" />
    </RelativeLayout>